--- a/Draw/Controller/Feed/Hot/TopPlayerView~ipad.xib
+++ b/Draw/Controller/Feed/Hot/TopPlayerView~ipad.xib
@@ -12,6 +12,7 @@
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBUIButton</string>
+			<string>IBUIImageView</string>
 			<string>IBUIView</string>
 			<string>IBUILabel</string>
 			<string>IBProxyObject</string>
@@ -122,13 +123,27 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
+					<object class="IBUIImageView" id="422785245">
+						<reference key="NSNextResponder" ref="132429897"/>
+						<int key="NSvFlags">-2147483356</int>
+						<string key="NSFrame">{{196, 0}, {60, 60}}</string>
+						<reference key="NSSuperview" ref="132429897"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="265093746"/>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<object class="NSCustomResource" key="IBUIImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">gold_cup@2x.png</string>
+						</object>
+					</object>
 					<object class="IBUIButton" id="258266270">
 						<reference key="NSNextResponder" ref="132429897"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{255, 255}</string>
 						<reference key="NSSuperview" ref="132429897"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="265093746"/>
+						<reference key="NSNextKeyView" ref="422785245"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -200,6 +215,14 @@
 					<int key="connectionID">16</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">cupImage</string>
+						<reference key="source" ref="132429897"/>
+						<reference key="destination" ref="422785245"/>
+					</object>
+					<int key="connectionID">19</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">clickPlayerView:</string>
 						<reference key="source" ref="258266270"/>
@@ -236,6 +259,7 @@
 							<reference ref="295224477"/>
 							<reference ref="105678131"/>
 							<reference ref="258266270"/>
+							<reference ref="422785245"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -260,6 +284,11 @@
 						<reference key="object" ref="258266270"/>
 						<reference key="parent" ref="132429897"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">18</int>
+						<reference key="object" ref="422785245"/>
+						<reference key="parent" ref="132429897"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -267,6 +296,7 @@
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="18.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.CustomClassName">TopPlayerView</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.CustomClassName">HJManagedImageV</string>
@@ -278,7 +308,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">17</int>
+			<int key="maxID">19</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -306,6 +336,7 @@
 					</object>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="avatar">HJManagedImageV</string>
+						<string key="cupImage">UIImageView</string>
 						<string key="levelInfo">UILabel</string>
 						<string key="maskButton">UIButton</string>
 						<string key="nickName">UILabel</string>
@@ -314,6 +345,10 @@
 						<object class="IBToOneOutletInfo" key="avatar">
 							<string key="name">avatar</string>
 							<string key="candidateClassName">HJManagedImageV</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="cupImage">
+							<string key="name">cupImage</string>
+							<string key="candidateClassName">UIImageView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="levelInfo">
 							<string key="name">levelInfo</string>
@@ -339,6 +374,10 @@
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
+		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
+			<string key="NS.key.0">gold_cup@2x.png</string>
+			<string key="NS.object.0">{160, 160}</string>
+		</object>
 		<string key="IBCocoaTouchPluginVersion">933</string>
 	</data>
 </archive>
