--- a/Draw/Controller/Feed/Cell/FeedCell~ipad.xib
+++ b/Draw/Controller/Feed/Cell/FeedCell~ipad.xib
@@ -44,7 +44,7 @@
 							<object class="IBUIImageView" id="745456885">
 								<reference key="NSNextResponder" ref="703497056"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{25, 23}, {87, 89}}</string>
+								<string key="NSFrame">{{24, 18}, {88, 88}}</string>
 								<reference key="NSSuperview" ref="703497056"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="995215504"/>
@@ -184,6 +184,7 @@
 								<string key="NSFrame">{{581, 18}, {162, 170}}</string>
 								<reference key="NSSuperview" ref="703497056"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
